Minor toolbar tweaks.

--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -1,4 +1,4 @@
-<div class="toolbar">
+<div class="toolbar toolbar-floating pull-left" style="margin-right: 10px;">
     <div class="col">
         <a class="btn" data-command="viewerSelect" style="transform: scaleX(-1)">
             <i class="zmdi zmdi-arrow-right-top"></i>
@@ -14,8 +14,9 @@
             <i class="zmdi zmdi-photo-size-select-small"></i>
         </a>
     </div>
-    <div class="col expand">
-    </div>
+</div>
+
+<div class="toolbar toolbar-floating">
     <div class="col">
         <a class="btn" data-command="viewerZoomIn">
             <i class="zmdi zmdi-plus-circle-o"></i>
