--- a/Journal/app/directives/art-document-viewer/art-document-viewer.html
+++ b/Journal/app/directives/art-document-viewer/art-document-viewer.html
@@ -1,4 +1,4 @@
-<div class="layout-root" style="background-color:#f2f2f2;">
+<div class="layout-root">
     <canvas id="canvas">
         HTML canvas is not supported by your browser.
     </canvas>
