--- a/Journal/app/directives/art-project-header/art-project-header.html
+++ b/Journal/app/directives/art-project-header/art-project-header.html
@@ -17,7 +17,7 @@
     <form id="project-form" name="projectForm" class="container padding-x-xl padding-y-xl" ng-submit="t.save()" uib-collapse="t.collapsed">
         <div class="form-group">
             <label for="title">Name</label>
-            <input type="text" class="form-control" id="title" name="title" placeholder="Projektname" ng-model="t.project.Name" required>
+            <input type="text" class="form-control" id="title" name="title" placeholder="Projektname" ng-model="t.project.Title" required>
         </div>
 
         <div class="form-group">
