--- a/Journal/app/directives/art-project-tabs/art-project-tabs.html
+++ b/Journal/app/directives/art-project-tabs/art-project-tabs.html
@@ -17,7 +17,7 @@
                         <i class="zmdi zmdi-xs zmdi-close"></i>
                     </a>
 
-                    <div ng-bind="project.Name" style="min-width: 130px;"></div>
+                    <div ng-bind="project.Title" style="min-width: 130px;"></div>
                 </div>
             </uib-tab-heading>
 
