Implemented projects module.

--- a/Journal/app/directives/art-project-header/art-project-header.html
+++ b/Journal/app/directives/art-project-header/art-project-header.html
@@ -50,7 +50,7 @@
                 <li class="list-item" ng-repeat="user in t.users">
                     <div class="layout-container padding-x-xs padding-y-xs">
                         <div class="col">
-                            <art-avatar-img width="40" height="40" src="{{user.photoUrl}}"></art-avatar-img>
+                            <art-user-photo-img width="40" height="40" src="{{user.photoUrl}}"></art-user-photo-img>
                         </div>
                         <div class="col expand">
                             <div class="padding-x-md">
