--- a/Journal/app/directives/art-settings-user/art-settings-user.html
+++ b/Journal/app/directives/art-settings-user/art-settings-user.html
@@ -6,30 +6,15 @@
     <div class="clearfix"></div>
 
     <div class="form-group">
-        <input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" art-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
-
-        <button id="photo-btn" class="btn btn-chromeless img-avatar img-avatar-lg circular">
-            <img id="photo-img" ng-src="{{userPhotoUrl}}" width="100" height="100">
-        </button>
+        <art-user-photo-img src="userPhotoUrl" width="100" height="100" changed="onPhotoChanged"></art-user-photo-img>
 
         <label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> {{ 'SETTINGS.PROFILE.LABEL_PICTURE' | translate }}</label>
-
-        <script type="text/javascript">
-            $('#photo-btn').on('click', function () {
-                $('#photo').click();
-            });
-        </script>
     </div>
 
     <div style="max-width: 500px;">
         <div class="form-group">
             <label for="name">{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}" size="30" ng-model="user.Name">
-        </div>
-
-        <div class="form-group">
-            <label for="organization">{{'SETTINGS.PROFILE.LABEL_ORGANIZATION' | translate}}</label>
-            <input type="text" class="form-control" id="organization" name="organization" placeholder="{{'SETTINGS.PROFILE.LABEL_ORGANIZATION' | translate}}" length="25" ng-model="user.Organization">
         </div>
 
         <div class="form-group">
