--- a/Journal/app/directives/art-project-tabs/art-project-tabs.html
+++ b/Journal/app/directives/art-project-tabs/art-project-tabs.html
@@ -21,8 +21,7 @@
                 </div>
             </uib-tab-heading>
 
-            <art-project-header project="project"></art-project-header>
-            <art-file-list></art-file-list>
+            <art-project-view project="project"></art-project-view>
         </uib-tab>
         <uib-tab>
             <uib-tab-heading>
@@ -31,7 +30,7 @@
                 </div>
             </uib-tab-heading>
 
-            <art-project-header project="null"></art-project-header>
+            <art-project-view project="null"></art-project-view>
         </uib-tab>
     </uib-tabset>
 </div>
