--- a/Journal/app/directives/art-user-photo-img/art-user-photo-img.html
+++ b/Journal/app/directives/art-user-photo-img/art-user-photo-img.html
@@ -3,5 +3,5 @@
 
     <div class="placeholder"></div>
 
-    <img ng-show="t.src" ng-src="{{t.src}}" width={{t.width}} height="{{t.height}}">
+    <img ng-show="t.hasPhoto" ng-src="{{t.src}}" width={{t.width}} height="{{t.height}}">
 </a>
