--- a/Journal/app/directives/art-document-viewer/art-document-viewer.html
+++ b/Journal/app/directives/art-document-viewer/art-document-viewer.html
@@ -1,5 +1,5 @@
 <div class="layout-root">
-    <canvas id="canvas">
+    <canvas class="viewer-canvas">
         HTML canvas is not supported by your browser.
     </canvas>
 
