--- a/Journal/app/directives/art-file-list/art-file-list.html
+++ b/Journal/app/directives/art-file-list/art-file-list.html
@@ -1,16 +1,22 @@
+<div class="toolbar toolbar-view">
+    <a class="btn btn-chromeless padding-x-md"><i class="zmdi zmdi-search"></i><span class="btn-label"><i>Suchen</i></span></a>
+    <a class="btn btn-chromeless pull-right" ng-click="t.togglePropertyPane()"><i class="zmdi zmdi-more-vert"></i></a>
+    <a class="btn btn-chromeless pull-right"><i class="zmdi zmdi-view-module"></i></a>
+</div>
+
 <div class="scroll-container scroll-y">
-    <div class="layout-container" style="padding: 8px;">
-        <div ng-switch on="t.files.length > 0">
-            <div ng-switch-when="true">
-                <ul id="file-list" class="cards">
+    <div class="layout-container" ng-switch="">
+        <div ng-switch="t.files.length">
+            <div ng-switch-when="0" ng-transclude="emptySlot" class="text-center">
+            </div>
+            <div ng-switch-default>
+                <ul class="cards">
                     <li ng-repeat="file in t.files">
-                        <art-file-card file="{{file}}" ng-model="file" jqyoui-draggable="{onStart: 't.onDragStart', onStop: 't.onDragStop'}" data-drag="true"
-                            data-jqyoui-options="{opacity:0.7, helper:'clone', appendTo: 'body', placeholder:'keep', cursorAt: {top: 5, left: 5}}"></art-file-card>
+                        <art-file-card file="file " ng-model="file " jqyoui-draggable="{onStart: 't.onDragStart', onStop:
+                        't.onDragStop'} " data-drag="true " data-jqyoui-options="{opacity:0.7, helper: 'clone', appendTo: 'body', placeholder: 'keep', cursorAt:
+                        {top: 5, left: 5}} " clicked="t.onClick "></art-file-card>
                     </li>
                 </ul>
-            </div>
-            <div ng-switch-default class="text-center">
-                <h3 style="margin-top: 5em;">Your recent files will appear here.</h3>
             </div>
         </div>
     </div>
