Improved document view.

--- a/Journal/app/directives/art-project-tabs/art-project-tabs.html
+++ b/Journal/app/directives/art-project-tabs/art-project-tabs.html
@@ -4,7 +4,7 @@
     <uib-tab ng-click="t.selectProject(null)">
         <uib-tab-heading>
             <div class="nav-link-container">
-                <i class="zmdi zmdi-lg zmdi-time-restore"></i>
+                <i class="zmdi zmdi-menu"></i>
             </div>
         </uib-tab-heading>
 
