Refactored project view directive.

--- a/Journal/app/directives/art-project-tabs/art-project-tabs.html
+++ b/Journal/app/directives/art-project-tabs/art-project-tabs.html
@@ -35,6 +35,6 @@
             </div>
         </uib-tab-heading>
 
-        <art-project-view project="null"></art-project-view>
+        <art-project-view new="true"></art-project-view>
     </uib-tab>
 </uib-tabset>
