--- a/Journal/app/directives/art-task-control/art-task-control.html
+++ b/Journal/app/directives/art-task-control/art-task-control.html
@@ -12,6 +12,10 @@
 
     <div class="ctl-task padding-x-xs padding-y-xs" style="position: absolute; bottom: 1px; left: 0; right: 0;">
         <input type="text" class="form-control stretch-horizontal no-margin" style="margin-bottom: 5px;" placeholder="Create a new task"
-            ng-model="t.task.name" ng-change="t.updateTask()" ng-enter="t.postTask()" ng-esc="t.resetTask()"></input>
+            ng-model="t.task.name"
+            ng-change="t.updateTask(t.newTask)"
+            ng-enter="t.postTask(t.newTask)"
+            ng-esc="t.resetTask()">
+        </input>
     </div>
 </div>
