--- a/Journal/index.html
+++ b/Journal/index.html
@@ -113,6 +113,7 @@
 	<script type="text/javascript" src="app/services/window.service.js"></script>
 	<script type="text/javascript" src="app/filters/reverse.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-control/art-chat-control.js"></script>
+	<script type="text/javascript" src="app/directives/art-chat-input/art-chat-input.js"></script>
 	<script type="text/javascript" src="app/directives/art-client-state-info/art-client-state-info.js"></script>
 	<script type="text/javascript" src="app/directives/art-color-picker/art-color-picker.js"></script>
 	<script type="text/javascript" src="app/directives/art-document-history-view/art-document-history-view.js"></script>
