--- a/Journal/app/directives/art-document-view/art-document-view.html
+++ b/Journal/app/directives/art-document-view/art-document-view.html
@@ -1,7 +1,7 @@
 <div class="table-layout">
     <div class="row">
         <div class="toolbar toolbar-view">
-            <a class="btn btn-chromeless" ng-click="t.back()"><i class="zmdi zmdi-chevron-left"></i></a>
+            <a class="btn btn-chromeless" ng-click="t.navigateBack()"><i class="zmdi zmdi-chevron-left"></i></a>
             <div class="txt txt-title" ng-bind="t.file.label"></div>
             <a class="btn btn-primary pull-right" ng-lick="t.publish()"><i class="zmdi zmdi-share"></i><span class="btn-label">Teilen</span></a>
         </div>
@@ -12,19 +12,19 @@
 
             <div class="ui-sidebar ui-sidebar-right">
                 <uib-tabset>
-                    <uib-tab heading="Comments">
+                    <uib-tab heading="Chat">
                         <div class="layout-container">
-                            <art-chat-control file="t.file.uri"></art-chat-control>
+                            <art-chat-control entity-uri="t.latestRevisionUri"></art-chat-control>
                         </div>
                     </uib-tab>
                     <uib-tab heading="Topics">
                         <div class="layout-container">
-                            <art-topic-control file="t.file.uri"></art-topic-control>
+                            <art-topic-control entity-uri="t.latestRevisionUri"></art-topic-control>
                         </div>
                     </uib-tab>
                     <uib-tab heading="Todo">
                         <div class="layout-container padding-x-xl padding-y-xl text-center">
-                            <art-task-control file="t.file.uri"></art-task-control>
+                            <art-task-control entity-uri="t.latestRevisionUri"></art-task-control>
                         </div>
                     </uib-tab>
                 </uib-tabset>
