--- a/Journal/app/directives/art-file-list/art-file-list.html
+++ b/Journal/app/directives/art-file-list/art-file-list.html
@@ -1,6 +1,6 @@
 <div class="toolbar toolbar-view">
     <a class="btn btn-chromeless padding-x-md"><i class="zmdi zmdi-search"></i><span class="btn-label"><i>Suchen</i></span></a>
-    <a class="btn btn-chromeless pull-right" ng-click="t.togglePropertyPane()"><i class="zmdi zmdi-more-vert"></i></a>
+    <a class="btn btn-chromeless pull-right" ng-click="t.onMoreClicked()"><i class="zmdi zmdi-more-vert"></i></a>
     <a class="btn btn-chromeless pull-right"><i class="zmdi zmdi-view-module"></i></a>
 </div>
 
