Implemented sync of user agents.

--- a/Journal/app/dialogs/close-project-dialog/close-project-dialog.html
+++ b/Journal/app/dialogs/close-project-dialog/close-project-dialog.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="container padding-x-xl padding-y-xl">
-				<h2 class="modal-title">Archive '<span ng-bind="t.project.Name"></span>'?</h2>
+				<h2 class="modal-title">Archive '<span ng-bind="t.project.Title"></span>'?</h2>
 			</div>
 		</div>
 	</div>
