--- a/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
+++ b/Journal/app/dialogs/edit-person-dialog/edit-person-dialog.html
@@ -1,15 +1,15 @@
 <div class="padding-x-xl padding-y-xl">
-	<form id="person-form" name="personForm">
+	<form id="form" name="personForm">
 		<art-user-photo-img width="100" height="100" src="t.photoUrl" changed="t.onPhotoChanged"></art-user-photo-img>
-
-		<div class="form-group">
-			<label>Name</label><br>
-			<input class="form-control" type="text" ng-model="t.person.Name" ng-change="t.findPersons(t.person.Name)">
-		</div>
 
 		<div class="form-group">
 			<label>E-Mail</label><br>
 			<input class="form-control" type="text" ng-model="t.person.EmailAddress" ng-change="t.findPersons(t.person.EmailAddress)">
+		</div>
+		
+		<div class="form-group">
+			<label>Name</label><br>
+			<input class="form-control" type="text" ng-model="t.person.Name" ng-change="t.findPersons(t.person.Name)">
 		</div>
 
 		<ul class="list-unstyled list-view">
