--- a/Journal/index.html
+++ b/Journal/index.html
@@ -93,6 +93,7 @@
 	<script type="text/javascript" src="app/services/agent.service.js"></script>
 	<script type="text/javascript" src="app/services/api.service.js"></script>
 	<script type="text/javascript" src="app/services/app.service.js"></script>
+	<script type="text/javascript" src="app/services/authentication.service.js"></script>
 	<script type="text/javascript" src="app/services/client.service.js"></script>
 	<script type="text/javascript" src="app/services/comment.service.js"></script>
 	<script type="text/javascript" src="app/services/cookie.service.js"></script>
