Added event dispatcher to agentService. Improved loading of files in art-file-list.

--- a/Journal/app/directives/art-project-tabs/art-project-tabs.html
+++ b/Journal/app/directives/art-project-tabs/art-project-tabs.html
@@ -1,4 +1,4 @@
-<art-user-menu user="t.currentUser"></art-user-menu>
+<art-user-menu></art-user-menu>
 
 <uib-tabset class="header-tabs" active="t.activeTab">
     <uib-tab>
