--- a/Journal/app/directives/art-file-list/art-file-list.html
+++ b/Journal/app/directives/art-file-list/art-file-list.html
@@ -4,20 +4,16 @@
     <a class="btn btn-chromeless pull-right"><i class="zmdi zmdi-view-module"></i></a>
 </div>
 
-<div class="scroll-container scroll-y">
-    <div class="layout-container" ng-switch="">
-        <div ng-switch="t.files.length">
-            <div ng-switch-when="0" ng-transclude="emptySlot" class="text-center">
-            </div>
-            <div ng-switch-default>
-                <ul class="cards">
-                    <li ng-repeat="file in t.files">
-                        <art-file-card file="file " ng-model="file " jqyoui-draggable="{onStart: 't.onDragStart', onStop:
+<div class="scroll-container scroll-y" ng-show="t.files">
+    <div class="layout-container">
+        <ul ng-show="t.files.length > 0" class="cards">
+            <li ng-repeat="file in t.files">
+                <art-file-card file="file " ng-model="file " jqyoui-draggable="{onStart: 't.onDragStart', onStop:
                         't.onDragStop'} " data-drag="true " data-jqyoui-options="{opacity:0.7, helper: 'clone', appendTo: 'body', placeholder: 'keep', cursorAt:
                         {top: 5, left: 5}} " clicked="t.onClick "></art-file-card>
-                    </li>
-                </ul>
-            </div>
+            </li>
+        </ul>
+        <div ng-show="t.files.length === 0" class="text-center" ng-transclude="emptySlot">
         </div>
     </div>
 </div>
