Implemented search input field.

--- a/Journal/index.html
+++ b/Journal/index.html
@@ -134,6 +134,7 @@
 	<script type="text/javascript" src="app/directives/art-project-tabs/art-project-tabs.js"></script>
 	<script type="text/javascript" src="app/directives/art-project-view/art-project-view.js"></script>
 	<script type="text/javascript" src="app/directives/art-query-editor/art-query-editor.js"></script>
+	<script type="text/javascript" src="app/directives/art-search-input/art-search-input.js"></script>
 	<script type="text/javascript" src="app/directives/art-settings-accounts/art-settings-accounts.js"></script>
 	<script type="text/javascript" src="app/directives/art-settings-apps/art-settings-apps.js"></script>
 	<script type="text/javascript" src="app/directives/art-settings-user/art-settings-user.js"></script>
