--- a/Journal/app/directives/art-file-list/art-file-list.html
+++ b/Journal/app/directives/art-file-list/art-file-list.html
@@ -1,14 +1,13 @@
 <div class="toolbar toolbar-view">
-    <a class="btn btn-chromeless padding-x-md"><i class="zmdi zmdi-search"></i><span class="btn-label"><i>Suchen</i></span></a>
+    <art-search-input query="t.query"></art-search-input>
     <a class="btn btn-chromeless pull-right" ng-click="t.onMoreClicked()"><i class="zmdi zmdi-more-vert"></i></a>
-    <a class="btn btn-chromeless pull-right"><i class="zmdi zmdi-view-module"></i></a>
 </div>
 
 <div class="scroll-container scroll-y" ng-show="t.files">
     <div class="layout-container">
         <ul ng-show="t.files.length > 0" class="cards">
             <li ng-repeat="file in t.files">
-                <art-file-card file="file " ng-model="file " jqyoui-draggable="{onStart: 't.onDragStart', onStop:
+                <art-file-card file="file " ng-model="file " ng-hide="file.visible === false" jqyoui-draggable="{onStart: 't.onDragStart', onStop:
                         't.onDragStop'} " data-drag="true " data-jqyoui-options="{opacity:0.7, helper: 'clone', appendTo: 'body', placeholder: 'keep', cursorAt:
                         {top: 5, left: 5}} " clicked="t.onClick "></art-file-card>
             </li>
